src/index.css
@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
@import "tailwindcss";

:root {
  --background: 58 20% 98%;
  --foreground: 231 16% 12%;

  --muted: 213 34% 93%;
  --muted-foreground: 215 22% 43%;

  --border: 214 32% 73%;
  --valentines-border: 338, 68%, 63%;

  --primary: 186 100% 32%;
  --secondary: 42 96% 72%;
}

.valentines {
  --border: 338, 68%, 63%;
  --primary: 338, 68%, 63%;
}

.dark {
  --background: 230 25% 3%;
  --foreground: 0 0% 96%;

  --muted: 230 18% 8%;
  --muted-foreground: 215 15% 70%;

  --border: 230 15% 18%;
  --valentines-border: 338 70% 60%;

  --primary: 185 70% 12%;
  --secondary: 42 60% 18%;
}

@theme inline {
  --color-background: hsl(var(--background));
  --color-foreground: hsl(var(--foreground));

  --color-muted: hsl(var(--muted));
  --color-muted-foreground: hsl(var(--muted-foreground));

  --color-border: hsl(var(--border));
  --color-valentines-border: hsl(var(--valentines-border));

  --color-primary: hsl(var(--primary));
  --color-secondary: hsl(var(--secondary));
}

* {
  @apply border-border;
}

body {
  @apply text-foreground/90 font-sans bg-gradient-to-tl from-primary/50 to-secondary/50 h-screen;
}

.dark body {
  @apply from-primary/75 to-secondary/75;
}

